objects/TopBoxWG__TopBox_Field_Mapping_Value__mdt.object
<CustomObject>
    <fields>
        <fullName>TopBoxWG__Client_Field_Type__c</fullName>
        <label>Client Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DATE</fullName>
                </value>
                <value>
                    <fullName>DATETIME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TopBoxWG__Client_Text_Value__c</fullName>
        <label>Client Text Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Field_Mapping__c</fullName>
        <label>TopBox Field Mapping</label>
        <referenceTo>TopBoxWG__TopBox_Field_Mapping__mdt</referenceTo>
        <relationshipLabel>TopBox Field Mapping Values</relationshipLabel>
        <relationshipName>TopBox_Field_Mapping_Values</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Field_Type__c</fullName>
        <label>TopBox Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DATE</fullName>
                </value>
                <value>
                    <fullName>DATETIME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Value__c</fullName>
        <label>TopBox Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text Value Conversion</fullName>
                    <default>true</default>
                    <label>Text Value Conversion</label>
                </value>
                <value>
                    <fullName>Field Type Conversion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TopBox Field Mapping Value</label>
    <pluralLabel>TopBox Field Mapping Values</pluralLabel>
</CustomObject>